oss/yaml/jenkins/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-svc
  namespace: jenkins
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      targetPort: 8080
      port: 80
    - name: https
      protocol: TCP
      targetPort: 8080
      port: 443
    - name: jnlp
      protocol: TCP
      targetPort: 50000
      port: 50000
  selector:
    app: jenkins
